# zetachain-nft

./: .gitignore  Anchor.toml  LICENSE  README.md  package-lock.json  package.json
programs/gateway/: Cargo.toml
programs/universal-nft/: Cargo.toml
programs/universal-nft/src/: error.rs  events.rs  lib.rs
programs/universal-nft/src/instructions/: admin.rs  gateway_callbacks.rs  initialize.rs  initialize_collection.rs  mint_nft.rs  mod.rs  receive_nft_cross_chain.rs  send_nft_cross_chain.rs
programs/universal-nft/src/state/: collection.rs  mod.rs  nft_record.rs  outbound_transfer.rs  pda.rs
tests/: universal-nft.ts
