[package]
name = "universal-nft"
version = "0.1.0"
description = "Universal NFT program for cross-chain transfers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "universal_nft"

[features]
default = []
upgrade-test = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
dev = []

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.31.1" }
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }
gateway = { path = "../gateway", features = ["cpi"] }
